<resources>
    <string name="app_name" translatable="false">Bogadex</string>
    <string name="title_list_game">Game list</string>
    <string name="searchbar_hint">Search game</string>

    <string name="browse_games">Collection</string>
    <string name="content_browse_games">Browse game collection</string>
    <string name="game_tools">Game tools</string>
    <string name="content_game_tools">Browse companion tools for games</string>

    <string name="display_all">Display all</string>
    <string name="display_collection">My collection</string>
    <string name="display_wishlist">My wishlist</string>
    <string name="display_solo">Single player playable</string>
    <string name="display_filler">Filler games</string>

    <string name="change_display">Toggle view</string>
    <string name="content_change_display">Switch display of your collection</string>

    <string name="settings">Settings</string>
    <string name="content_settings">Personalize your application experience</string>
</resources>
